Placeholder: Notification toolbox settings.
* Patchset2 -- almost working!

* Patchset3 -- Now working, needed to replace a few spelling issues.
  Need to add every available widget. (Which will be overlaid by each
  device).

* Patchset4 -- Added all options for widgets, some are inoperable but will
  work eventually (when device permits). Also added icons for the widget
  chosen.

* Patchset5 -- A little better way to handle the widget arrays.

* Patchset6 -- Fix adding widgets, was appending the widget string even
  if the widget already existed.

* Patchset7 -- Change out icons for batter 'ICS' looking ones. Localise and
  fix some dialog strings.

Change-Id: Ic007e2af47fdb859a47515c109ed7527a9402154

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,5 +48,18 @@
             <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
                 android:resource="@id/lockscreen_settings" />
         </activity>
+        <!-- Statusbar -->
+        <activity android:name="Settings$StatusbarActivity"
+                android:label="@string/statusbar_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Statusbar" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/statusbar_settings" />
+        </activity>
     </application>
 </manifest>
