--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -114,5 +114,36 @@
                 android:value="com.evervolv.toolbox.activities.Statusbar" />
         </activity>
 
+        <!-- Interface -->
+        <activity android:name="Settings$InterfaceActivity"
+                android:label="@string/interface_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Statusbar" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/interface_settings" />
+        </activity>
+
+        <activity android:name="Settings$InterfaceButtonsActivity"
+                android:label="@string/pref_interface_buttons_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Interface$Buttons" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/interface_settings" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
+                android:resource="@string/pref_interface_title_head" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Interface" />
+
+        </activity>
     </application>
 </manifest>
