--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,23 +80,6 @@
                 android:resource="@id/statusbar_settings" />
         </activity>
 
-        <activity android:name="Settings$NotificationToolboxActivity"
-                android:label="@string/pref_notification_toolbox_title"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:clearTaskOnLaunch="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
-                android:value="com.evervolv.toolbox.activities.Statusbar$NotifToolbox" />
-            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
-                android:resource="@id/statusbar_settings" />
-            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
-                android:resource="@string/pref_statusbar_title_head" />
-            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
-                android:value="com.evervolv.toolbox.activities.Statusbar" />
-        </activity>
-
         <activity android:name="Settings$StatusbarIconsActivity"
                 android:label="@string/pref_statusbar_icons_title"
                 android:configChanges="orientation|keyboardHidden|screenSize"
@@ -145,5 +128,20 @@
                 android:value="com.evervolv.toolbox.activities.Interface" />
 
         </activity>
+
+        <!-- Notification toolbox -->
+        <activity android:name="Settings$NotificationToolboxActivity"
+                android:label="@string/pref_notification_toolbox_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.NotificationToolbox" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/notification_toolbox_settings" />
+        </activity>
+
     </application>
 </manifest>
