Add basic Rotation settings UI
Based on commit from:
https://github.com/jonasl/android_packages_apps_CMSettings/commit/
f97ae31d4ee420786b9ababcaecbeb65ed6ab0cc#diff-3



Change-Id: I5d5a7f227d2df2a83e34f8e9953b9e22300c4cc8

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -130,6 +130,24 @@
 
         </activity>
 
+        <activity android:name="Settings$InterfaceRotationActivity"
+                android:label="@string/pref_interface_rotation_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Interface$Rotation" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/interface_settings" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
+                android:resource="@string/pref_interface_title_head" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Interface" />
+
+        </activity>
+
         <!-- Notification toolbox -->
         <activity android:name="Settings$NotificationToolboxActivity"
                 android:label="@string/pref_notification_toolbox_title"
