--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.HARDWARE_TEST" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.REBOOT" />
+
     <uses-sdk android:minSdkVersion="14" />
 
     <application
@@ -108,24 +110,6 @@
                 android:value="com.evervolv.toolbox.activities.Interface" />
             <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
                 android:resource="@id/interface_settings" />
-        </activity>
-
-        <activity android:name="Settings$InterfaceButtonsActivity"
-                android:label="@string/pref_interface_buttons_title"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:clearTaskOnLaunch="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
-                android:value="com.evervolv.toolbox.activities.Interface$Buttons" />
-            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
-                android:resource="@id/interface_settings" />
-            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
-                android:resource="@string/pref_interface_title_head" />
-            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
-                android:value="com.evervolv.toolbox.activities.Interface" />
-
         </activity>
 
         <activity android:name="Settings$InterfaceRotationActivity"
