EVToolbox: Add an option to track updates.
 * Includes: Releases, nightlies, and test builds for each device.
 * Allows for multiple simultaneous downloads.
 * Downloads are tracked via the UI using the Android DownloadManager, which
   also supplies a notification for progress (to be removed in the future).
 * All downloads are housed in SDCARD:EVupdates/{gapps, nightly, release,
   testing}/
 * TWRP is exclusively supported for now, other support may follow.
 * Scheduling to check for updates is working / implemented. But
   notifications will be added in the future.

Change-Id: I05e429b898cb376aa53490bb9ab41e58010c962a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,22 +4,27 @@
     android:versionCode="1"
     android:versionName="1.0" 
     coreApp="true"
-    android:sharedUserId="android.uid.system"
     >
     
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.HARDWARE_TEST" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.REBOOT" />
+    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
+    <uses-permission android:name="android.permission.ACCESS_CACHE_FILESYSTEM"/>
 
-    <uses-sdk android:minSdkVersion="14" />
+    <uses-sdk android:minSdkVersion="16"
+        android:targetSdkVersion="16" />
 
     <application
         android:icon="@drawable/ic_launcher_evtoolbox"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:hardwareAccelerated="true">
         <activity
             android:label="@string/app_name"
             android:name="com.evervolv.toolbox.Settings"
@@ -210,9 +215,97 @@
                 android:value="com.evervolv.toolbox.activities.Performance" />
         </activity>
 
+        <!-- Updates -->
+        <activity android:name="Settings$UpdatesActivity"
+                android:label="@string/updates_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/evervolv_updates" />
+        </activity>
+
+        <activity android:name="Settings$UpdatesNightlyActivity"
+                android:label="@string/pref_updates_nightly_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates$Nightly" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/evervolv_updates" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
+                android:resource="@string/pref_updates_title_head" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates" />
+        </activity>
+
+        <activity android:name="Settings$UpdatesTestActivity"
+                android:label="@string/pref_updates_test_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates$Test" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/evervolv_updates" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
+                android:resource="@string/pref_updates_title_head" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates" />
+        </activity>
+
+        <activity android:name="Settings$UpdatesGappsActivity"
+                android:label="@string/pref_updates_gapps_title"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="com.evervolv.toolbox.FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates$Gapps" />
+            <meta-data android:name="com.evervolv.toolbox.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/evervolv_updates" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_TITLE"
+                android:resource="@string/pref_updates_title_head" />
+            <meta-data android:name="com.evervolv.toolbox.PARENT_FRAGMENT_CLASS"
+                android:value="com.evervolv.toolbox.activities.Updates" />
+        </activity>
+
+        <service android:name=".updates.services.UpdateManifestService"
+                android:process=":ManifestService" >
+        </service>
+
+        <service android:name=".updates.services.DownloadService"
+                android:process=":DownloadService">
+        </service>
+
+        <receiver android:name=".updates.receivers.DownloadCompleteReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
+                <category android:name="android.intent.category.HOME"></category>
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".updates.receivers.DownloadNotificationClickReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
+                <category android:name="android.intent.category.HOME"/>
+            </intent-filter>
+        </receiver>
+
         <receiver android:name=".BootReceiver" android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.HOME"></category>
             </intent-filter>
         </receiver>
     </application>
