Toolbox: Import superuser
 * Su requests are working fine, still needs a settings / log
   implementation.

Change-Id: If1df714be659a8d71fedc72034b0787dff60e51e

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,9 @@
     coreApp="true"
     >
 
+    <uses-sdk android:minSdkVersion="18"
+              android:targetSdkVersion="18" />
+
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,8 +18,28 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.REBOOT" />
 
-    <uses-sdk android:minSdkVersion="18"
-        android:targetSdkVersion="18" />
+    <permission
+            android:name="android.permission.REQUEST_SUPERUSER"
+            android:protectionLevel="signature" />
+    <permission
+            android:name="android.permission.REPORT_SUPERUSER"
+            android:protectionLevel="signature" />
+
+    <permission-group
+            android:name="android.permission-group.SUPERUSER"
+            android:description="@string/superuser_description_more"
+            android:icon="@drawable/ic_action_permission"
+            android:label="@string/superuser"
+            android:priority="10000" />
+
+    <permission
+            android:name="android.permission.ACCESS_SUPERUSER"
+            android:description="@string/superuser_description_more"
+            android:icon="@drawable/ic_action_permission"
+            android:label="@string/superuser_description"
+            android:logo="@drawable/ic_action_permission"
+            android:permissionGroup="android.permission-group.SUPERUSER"
+            android:protectionLevel="dangerous" />
 
     <application
         android:icon="@drawable/ic_launcher_toolbox"
@@ -39,6 +62,62 @@
                 <category android:name="android.intent.category.HOME"/>
             </intent-filter>
         </receiver>
+
+        <!--Superuser-->
+        <!-- Only system/su can open this activity -->
+        <!-- This activity will then call the MultitaskSuRequestActivity to create a new task stack -->
+        <activity
+                android:name=".superuser.RequestActivity"
+                android:configChanges="keyboardHidden|orientation|screenSize"
+                android:label="@string/superuser"
+                android:launchMode="singleTask"
+                android:excludeFromRecents="true"
+                android:permission="android.permission.REQUEST_SUPERUSER"
+                android:process=":superuser"
+                />
+        <!-- Only system/su can open this activity -->
+        <!-- This is activity is started in multiuser mode when the user invoking su -->
+        <!-- is not the device owner (user id 0). -->
+        <activity
+                android:name=".superuser.NotifyActivity"
+                android:configChanges="keyboardHidden|orientation|screenSize"
+                android:label="@string/superuser"
+                android:launchMode="singleTask"
+                android:excludeFromRecents="true"
+                android:permission="android.permission.REQUEST_SUPERUSER"
+                android:process=":superuser"
+                />
+
+        <!-- Multiple instances of this activity can be running for multiple su requests -->
+        <activity
+                android:name=".superuser.MultitaskSuRequestActivity"
+                android:configChanges="keyboardHidden|orientation|screenSize"
+                android:excludeFromRecents="true"
+                android:exported="false"
+                android:label="@string/request"
+                android:process=":superuser"
+                />
+
+        <receiver
+                android:name=".superuser.SuReceiver"
+                android:permission="android.permission.REPORT_SUPERUSER" />
+
+        <receiver
+                android:name=".superuser.PackageChangeReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <data android:scheme="package" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <data android:scheme="package" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+        <!--/Superuser-->
 
     </application>
 </manifest>
