--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <application
         android:icon="@drawable/ic_launcher_toolbox"
         android:label="@string/app_name"
-        android:hardwareAccelerated="true">
+        android:hardwareAccelerated="true"
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
 
         <activity
             android:name="com.evervolv.toolbox.Toolbox"
