--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,12 +48,25 @@
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
 
         <activity
-            android:name="com.evervolv.toolbox.Toolbox"
+            android:name=".Toolbox"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".superuser.SuperuserAppActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:excludeFromRecents="true"
+            android:parentActivityName=".Toolbox">
+        </activity>
+
+        <activity
+            android:name=".superuser.SuperuserLogsActivity"
+            android:excludeFromRecents="true"
+            android:parentActivityName=".Toolbox">
         </activity>
 
         <receiver android:name=".receivers.BootReceiver">
