--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.REBOOT" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <permission
             android:name="android.permission.REQUEST_SUPERUSER"
@@ -75,6 +76,10 @@
                 <category android:name="android.intent.category.HOME"/>
             </intent-filter>
         </receiver>
+
+        <service android:name=".services.UploadService"
+                 android:process=":UploadService">
+        </service>
 
         <!--Superuser-->
         <!-- Only system/su can open this activity -->
