--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -102,6 +102,24 @@
                 android:resource="@string/style_summary" />
         </activity-alias>
 
+        <!-- Expanded Desktop settings (Display category) -->
+        <activity-alias
+            android:name=".applications.ExpandedDesktopSettings"
+            android:label="@string/expanded_desktop_settings_title"
+            android:targetActivity="PartsActivity">
+            <intent-filter android:priority="-9">
+                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+                <action android:name="com.evervolv.toolbox.EXPANDED_DESKTOP_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.display" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/expanded_desktop_settings_summary" />
+        </activity-alias>
+
         <!-- Status bar settings (System category) -->
         <activity-alias
             android:name=".statusbar.StatusBarSettings"
