--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
     >
 
     <uses-sdk android:minSdkVersion="18"
-              android:targetSdkVersion="19" />
+              android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
@@ -46,7 +46,7 @@
         android:icon="@drawable/ic_launcher_toolbox"
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+        android:theme="@style/Theme.EVToolbox">
 
         <activity
             android:name=".Toolbox"
