--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,7 @@
     coreApp="true"
     >
 
-    <uses-sdk android:minSdkVersion="18"
-              android:targetSdkVersion="21" />
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
