--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:protectionLevel="dangerous" />
 
     <application
-        android:icon="@drawable/ic_launcher_toolbox"
+        android:icon="@mipmap/ic_toolbox"
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
         android:theme="@style/Theme.EVToolbox">
