--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,11 +50,14 @@
 
         <activity
             android:name=".Toolbox"
+            android:icon="@drawable/ic_settings_toolbox"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                    android:value="com.android.settings.category.evervolv" />
         </activity>
 
         <activity
