--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -99,6 +99,25 @@
                 android:resource="@string/style_summary" />
         </activity-alias>
 
+        <!-- Status bar settings (System category) -->
+        <activity-alias
+            android:name=".statusbar.StatusBarSettings"
+            android:label="@string/status_bar_title"
+            android:icon="@drawable/ic_settings_statusbar"
+            android:targetActivity="PartsActivity">
+            <intent-filter android:priority="254">
+                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+                <action android:name="com.evervolv.toolbox.STATUS_BAR_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.system" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/summary_empty" />
+        </activity-alias>
+
         <receiver android:name=".BootReceiver" android:enabled="true">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
