Toolbox: adjust superuser
 This change moves from a switch preference
 to a listpreference. Giving further control over
 what has superuser access. Original idea from CM,
 adapted for ev toolbox. Default action, disabled.
 https://github.com/CyanogenMod/android_packages_apps_Settings/commit/9c512949b5cf487703a75abc7a56d0d98df59e32

Change-Id: I50034ec672bdedea0c981e30d618dbce3b9fd99c

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,8 @@
         android:icon="@mipmap/ic_toolbox"
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
-        android:theme="@style/Theme.EVToolbox">
+        android:theme="@style/Theme.EVToolbox"
+        android:directBootAware="true">
 
         <activity
             android:name=".Toolbox"
