--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,8 @@
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
                     android:value="com.android.settings.category.evervolv" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/app_summary" />
         </activity>
 
         <receiver android:name=".receivers.BootReceiver">
