--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,6 +63,26 @@
                 android:value="com.evervolv.toolbox.PartsUpdater" />
         </activity>
 
+        <!-- LiveDisplay settings (Display category) -->
+        <activity-alias
+            android:name=".livedisplay.LiveDisplaySettings"
+            android:label="@*evervolv.platform:string/live_display_title"
+            android:targetActivity="PartsActivity">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="-256" />
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.display" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/live_display_summary" />
+        </activity-alias>
+
         <!-- Button settings (System category) -->
         <activity-alias
             android:name=".input.ButtonSettings"
