parts: introduce berry styles
Change-Id: Ifaacc78eed5234cdbe2fd089a06524bdf1193c8f
Signed-off-by: Joey <joey@lineageos.org>

LineageParts: switch to Style API

Change-Id: I3a8497505bf8f7def59654beec92dd2ebfdd057c
Signed-off-by: Joey <joey@lineageos.org>

LineageParts: Update the way OMS records details about overlays

Change-Id: I5809541ea93f5655c31656ab0969ca5995a45066

LineageParts: update for Style APIs updates

- The app that has set the current global style will be
  displayed in the global style preference (unless it was set from
  LineageParts itself).
- Accents list is now built using the API's getTrustedOverlays() method
- Also cleanup unused code

Change-Id: Ib7b1ca978635e568f7f0c147407270e5f588f0f1
Signed-off-by: Joey <joey@lineageos.org>

parts: styles: add support for more dark overlays

Change-Id: I9730419ce6303a0418f84281789084089dc0ae25
Signed-off-by: Joey <joey@lineageos.org>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,7 @@
     <uses-permission android:name="android.permission.READ_SEARCH_INDEXABLES" />
 
     <uses-permission android:name="evervolv.permission.MANAGE_REMOTE_PREFERENCES" />
+    <uses-permission android:name="evervolv.permission.CHANGE_STYLE" />
 
     <protected-broadcast android:name="com.evervolv.toolbox.PART_CHANGED" />
     <protected-broadcast android:name="com.evervolv.toolbox.REFRESH_PART" />
@@ -78,6 +79,24 @@
             <meta-data
                 android:name="com.android.settings.summary"
                 android:value="@string/summary_empty" />
+        </activity-alias>
+
+        <!-- Style settings (Display category) -->
+        <activity-alias
+            android:name=".style.StylePreferences"
+            android:label="@string/style_title"
+            android:targetActivity="PartsActivity">
+            <intent-filter android:priority="-3">
+                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+                <action android:name="com.evervolv.toolbox.STYLE_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.display" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/style_summary" />
         </activity-alias>
 
         <receiver android:name=".BootReceiver" android:enabled="true">
