--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,9 +36,9 @@
     <uses-permission android:name="android.permission.BIND_DEVICE_ADMIN" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.READ_SEARCH_INDEXABLES" />
+    <uses-permission android:name="android.permission.CHANGE_OVERLAY_PACKAGES" />
 
     <uses-permission android:name="evervolv.permission.MANAGE_REMOTE_PREFERENCES" />
-    <uses-permission android:name="evervolv.permission.CHANGE_STYLE" />
 
     <protected-broadcast android:name="com.evervolv.toolbox.PART_CHANGED" />
     <protected-broadcast android:name="com.evervolv.toolbox.REFRESH_PART" />
