Toolbox: Update IA preferences declarations to match AOSP settings
Change-Id: Iab95feeaf6cabf80ae6a0949b6bb75af6212e6a2

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,11 +69,14 @@
             android:label="@string/button_settings_title"
             android:icon="@drawable/ic_settings_buttons"
             android:targetActivity="PartsActivity">
-            <intent-filter android:priority="256">
-                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
                 <action android:name="com.evervolv.toolbox.BUTTON_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="-256" />
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.system" />
@@ -89,11 +92,14 @@
             android:name=".style.StylePreferences"
             android:label="@string/style_title"
             android:targetActivity="PartsActivity">
-            <intent-filter android:priority="-3">
-                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
                 <action android:name="com.evervolv.toolbox.STYLE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="3" />
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.display" />
@@ -107,11 +113,14 @@
             android:name=".applications.ExpandedDesktopSettings"
             android:label="@string/expanded_desktop_settings_title"
             android:targetActivity="PartsActivity">
-            <intent-filter android:priority="-9">
-                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
                 <action android:name="com.evervolv.toolbox.EXPANDED_DESKTOP_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="9" />
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.display" />
@@ -126,11 +135,14 @@
             android:label="@string/status_bar_title"
             android:icon="@drawable/ic_settings_statusbar"
             android:targetActivity="PartsActivity">
-            <intent-filter android:priority="254">
-                <action android:name="com.evervolv.toolbox.action.SETTINGS" />
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
                 <action android:name="com.evervolv.toolbox.STATUS_BAR_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="-254" />
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.system" />
