--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!--
 /**
  * Copyright 2016, The CyanogenMod Project
- * Copyright 2017-2018, The LineageOS Project
+ * Copyright 2017-2020, The LineageOS Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,6 +37,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.READ_SEARCH_INDEXABLES" />
     <uses-permission android:name="android.permission.CHANGE_OVERLAY_PACKAGES" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-permission android:name="evervolv.permission.MANAGE_REMOTE_PREFERENCES" />
 
